--- a/client/src/components/ToastNotifications/toastNotifications.styles.scss
+++ b/client/src/components/ToastNotifications/toastNotifications.styles.scss
@@ -18,12 +18,36 @@
     transform: translateX(-10px);
   }
 }
+
+@keyframes hide_toast {
+  0% {
+    transform: translateX(-10px);
+  }
+  40% {
+    transform: translateX(0%);
+  }
+  80% {
+    transform: translateX(-5%);
+  }
+  100% {
+    transform: translateX(calc(100% + 20px));
+    display: none;
+  }
+}
+
 .wrapper {
   position: fixed;
   top: 20px;
   right: 20px;
+  display: flex;
+  flex-direction: column; 
+  gap: 10px;
 }
 
+
+.hidden {
+  animation: hide_toast 0.3s ease forwards;
+}
 .notificationDiv {
   display: flex;
   align-items: center;
