--- a/client/src/layout/styles.scss
+++ b/client/src/layout/styles.scss
@@ -1,5 +1,5 @@
 .wrapper{
     display: flex;
-    flex-direction: column;
-    gap: 20px;
+    align-items: center;
+    justify-content: center;
 }
