--- a/client/src/layout/MainLayout/MainLayout.styles.scss
+++ b/client/src/layout/MainLayout/MainLayout.styles.scss
@@ -1,7 +1,8 @@
 .mainLayout{
-    margin-top: 4rem;
     display: flex;
     align-items: center;
+    justify-content: center;
+    min-height: 100vh;
     flex-direction: column;
     gap: 1rem;
 }
