--- a/client/src/components/AddTodo/addTodo.styles.scss
+++ b/client/src/components/AddTodo/addTodo.styles.scss
@@ -1,20 +1,26 @@
-.addTodoContainer{
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+.addTodoContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 
-    .input{
-        width: 30rem;
-        height: 2rem;
-        border-radius: 5px;
-        background: rgb(255, 255, 255);
-        border: 1px solid black;
-        padding: 1.2rem 0.6rem;
-    }
+  .input {
+    width: 30rem;
+    height: 2rem;
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    border: 1px solid black;
+    padding: 1.2rem 0.6rem;
+  }
 
-    .addIcon{
-        font-size: 2.6rem;
-        cursor: pointer;
-        color: #0FBD34;
-    }
+  .checkbox {
+
+    width: 1.6rem;
+    height: 1.6rem;
+  }
+
+  .addIcon {
+    font-size: 2.6rem;
+    cursor: pointer;
+    color: #0fbd34;
+  }
 }
