--- a/client/src/components/ToastNotifications/toastNotifications.styles.scss
+++ b/client/src/components/ToastNotifications/toastNotifications.styles.scss
@@ -44,7 +44,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-  width: 31rem;
+  max-width: auto;
   gap: 3rem;
   height: 5rem;
   border-radius: 5px;
