--- a/client/src/layout/MainLayout/MainLayout.styles.scss
+++ b/client/src/layout/MainLayout/MainLayout.styles.scss
@@ -6,3 +6,12 @@
     flex-direction: column;
     gap: 1rem;
 }
+
+.notifications{
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    flex-direction: column; 
+    gap: 10px;
+}
