--- a/client/src/components/TodoList/todoList.styles.scss
+++ b/client/src/components/TodoList/todoList.styles.scss
@@ -1,17 +1,21 @@
-.todoListContainer{
-    border-radius: 10px;
-    border: 1px solid gray;
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem
+.todoListContainer {
+  border-radius: 10px;
+  border: 1px solid gray;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+
+  p {
+    font-size: 1.8rem;
+  }
 }
 
-.wrapper{
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    display: flex;
-    flex-direction: column; 
-    gap: 10px;
+.wrapper {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
